@@ -6,6 +6,23 @@ import logging
 logger = logging.getLogger(__name__)
 
 
+class Subscription(object):
+
+    # Dirty on the subscription means: I am OK to be dirty and _not_
+    # get updated. The default is False: I want to be updated.
+
+    def __init__(self, root, strict, host, reverse, dirty):
+        self.root = root
+        self.strict = strict
+        self.host = host
+        self.reverse = reverse
+        self.dirty = dirty
+
+    def __hash__(self):
+        return hash((self.root, self.strict, self.host, self.reverse,
+                    self.dirty))
+
+
 class Resources(object):
     """A registry for resources.
 
@@ -44,26 +61,22 @@ class Resources(object):
         self.subscribers = {}
         self.dirty_dependencies = set()
 
-    def _subscribers(self, key, host):
-        return [root for root, strict, host_, reverse
-                in self._subscriptions(key, host)]
-
     def _subscriptions(self, key, host):
-        return [(root, strict, host_, reverse)
-                for root, strict, host_, reverse
-                in self.subscribers.get(key, ())
-                if host_ is None or host is None or host_ is host]
+        return [s for s in self.subscribers.get(key, ())
+                if s.host is None or host is None or s.host is host]
 
     @property
     def strict_subscribers(self):
         for key, subscribers in self.subscribers.items():
-            if any(strict for root, strict, host, reverse in subscribers):
+            if any(s.strict for s in subscribers):
                 yield key
 
     def provide(self, root, key, value):
         values = self.resources.setdefault(key, defaultdict(list))
         values[root].append(value)
-        self.dirty_dependencies.update(self._subscribers(key, root.host))
+        self.dirty_dependencies.update(
+            [s.root for s in self._subscriptions(key, root.host)
+             if not s.dirty])
 
     def get(self, key, host=None):
         """Return resource values without recording a dependency."""
@@ -76,10 +89,11 @@ class Resources(object):
             results = flatten(self.resources.get(key, {}).values())
         return results
 
-    def require(self, root, key, host=None, strict=True, reverse=False):
+    def require(self, root, key, host=None, strict=True, reverse=False,
+                dirty=False):
         """Return resource values and record component dependency."""
-        self.subscribers.setdefault(key, set()).add(
-            (root, strict, host, reverse))
+        s = Subscription(root, strict, host, reverse, dirty)
+        self.subscribers.setdefault(key, set()).add(s)
         return self.get(key, host)
 
     def reset_component_resources(self, root):
@@ -90,8 +104,10 @@ class Resources(object):
             del resources[root]
             # Removing this resource requires invalidating components that
             # depend on this resource and have already been configured so we
-            # need to mark them as dirty.
-            self.dirty_dependencies.update(self._subscribers(key, root.host))
+            # need to mark them as dirty if they want to be clean.
+            s = [s.root for s in self._subscriptions(key, root.host)
+                 if not s.dirty]
+            self.dirty_dependencies.update(s)
 
     def copy_resources(self):
         # A "one level deep" copy of the resources dict to be used by the
@@ -110,17 +126,17 @@ class Resources(object):
         for key, subscribers in self.subscribers.items():
             if key not in resources:
                 continue
-            for root, strict, host, reverse in subscribers:
-                if host is None:
+            for s in subscribers:
+                if s.host is None:
                     del resources[key]
                     break
                 for resource_root in list(resources[key]):
-                    if resource_root.host is host:
+                    if resource_root.host is s.host:
                         del resources[key][resource_root]
                         if not resources[key]:
                             del resources[key]
                             break
-                if not key in resources:
+                if key not in resources:
                     break
         return resources
 
@@ -132,7 +148,8 @@ class Resources(object):
     def unsatisfied_components(self):
         components = set()
         for resource in self.unsatisfied:
-            components.update(self._subscribers(resource, None))
+            components.update(
+                [s.root for s in self._subscriptions(resource, None)])
         return components
 
     def get_dependency_graph(self):
@@ -144,10 +161,10 @@ class Resources(object):
         """
         graph = defaultdict(set)
         for key, providers in self.resources.items():
-            for subscriber, _, _, reverse in self._subscriptions(key, None):
-                if reverse:
+            for s in self._subscriptions(key, None):
+                if s.reverse:
                     for provider in providers:
-                        graph[provider].add(subscriber)
+                        graph[provider].add(s.root)
                 else:
-                    graph[subscriber].update(providers)
+                    graph[s.root].update(providers)
         return graph
